@@ -1,0 +1,72 @@
+/*
+  This file is part of the clazy static checker.
+
+  Copyright (C) 2017 Sergio Martins <smartins@kde.org>
+
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU Library General Public
+  License as published by the Free Software Foundation; either
+  version 2 of the License, or (at your option) any later version.
+
+  This library is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  Library General Public License for more details.
+
+  You should have received a copy of the GNU Library General Public License
+  along with this library; see the file COPYING.LIB.  If not, write to
+  the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+  Boston, MA 02110-1301, USA.
+*/
+
+#include "install-event-filter.h"
+#include "Utils.h"
+#include "HierarchyUtils.h"
+#include "QtUtils.h"
+#include "TypeUtils.h"
+#include "checkmanager.h"
+
+#include <clang/AST/AST.h>
+
+using namespace clang;
+using namespace std;
+
+
+InstallEventFilter::InstallEventFilter(const std::string &name, const clang::CompilerInstance &ci)
+    : CheckBase(name, ci)
+{
+}
+
+
+void InstallEventFilter::VisitStmt(clang::Stmt *stmt)
+{
+    auto memberCallExpr = dyn_cast<CXXMemberCallExpr>(stmt);
+    if (!memberCallExpr || memberCallExpr->getNumArgs() != 1)
+        return;
+
+    FunctionDecl *func = memberCallExpr->getDirectCallee();
+    if (!func || func->getQualifiedNameAsString() != "QObject::installEventFilter")
+        return;
+
+    Expr *expr = memberCallExpr->getImplicitObjectArgument();
+    if (!expr)
+        return;
+
+    if (!isa<CXXThisExpr>(HierarchyUtils::getFirstChildAtDepth(expr, 1)))
+        return;
+
+    Expr *arg1 = memberCallExpr->getArg(0);
+    arg1 = arg1 ? arg1->IgnoreCasts() : nullptr;
+
+    CXXRecordDecl *record = TypeUtils::typeAsRecord(arg1);
+    auto methods = Utils::methodsFromString(record, "eventFilter");
+
+    for (auto method : methods) {
+        if (method->getQualifiedNameAsString() != "QObject::eventFilter") // It overrides it, probably on purpose then, don't warn.
+            return;
+    }
+
+    emitWarning(stmt, "'this' should usually be the filter object, not the monitored one.");
+}
+
+REGISTER_CHECK_WITH_FLAGS("install-event-filter", InstallEventFilter, CheckLevel1)
